[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprite/Ghost/GhostH1/GhostY3.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Ghost/GhostH1/GhostY4.png" type="Texture" id=2]
[ext_resource path="res://Sprite/Ghost/GhostH1/GhostY1.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Ghost/GhostH1/GhostY2.png" type="Texture" id=4]
[ext_resource path="res://script/ghost/GhostY.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "ATK",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.8333, 22 )

[sub_resource type="CircleShape2D" id=3]
radius = 139.67

[node name="GhostY" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 21
collision_mask = 21
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 1.16667, 7 )
shape = SubResource( 2 )

[node name="ghostY_collision" type="Area2D" parent="."]

[node name="ghostY_collision" type="CollisionShape2D" parent="ghostY_collision"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="ghostY_collision" to="." method="_on_ghostY_collision_body_entered"]
[connection signal="body_exited" from="ghostY_collision" to="." method="_on_ghostY_collision_body_exited"]
